# J-Linkage

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  JLinkage.cpp  Makefile  README.md  cluster.cpp  cluster.h  cmake_install.cmake  jlk  line.cpp  line.h  point.cpp  point.h  report.md  settings.h  window.cpp  window.h
.cmake/api/v1/reply/: cache-v2-525abd6da26740c5accc.json  cache-v2-7eb4daf1abc875aa09a4.json  cmakeFiles-v1-279f6633cbe83ac7cb2c.json  cmakeFiles-v1-753fdccd7e8dbb7e3a83.json  codemodel-v2-28e670e8e1f70c9488b3.json  codemodel-v2-37b6a8f91dba5a84126c.json  codemodel-v2-8e7f2d5531a2b0930494.json  index-2023-04-25T14-55-47-0056.json  index-2023-04-27T13-59-59-0186.json  index-2023-04-28T08-25-57-0281.json  target-jlk-2f96c3f134f09db3bdc9.json  target-jlk-4b1c927964995ce9579c.json  target-jlk-e047935dab04700d780c.json
.cmake/api/v1/reply.prev/: codemodel-v2-01a70218a816bd9113b2.json  codemodel-v2-5a65d48c53f97caeee44.json  index-2023-04-27T12-55-55-0312.json  index-2023-04-28T08-25-31-0884.json  target-jlk-710d77ed6b9175b56a53.json  target-jlk-f9bf66e6d34d5b6d273e.json
